--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>s3-wagon-private</groupId>
+    <groupId>circle</groupId>
     <artifactId>s3-wagon-private</artifactId>
     <version>1.1.2</version>
 
