--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>circle</groupId>
     <artifactId>s3-wagon-private</artifactId>
-    <version>1.1.2</version>
+    <version>1.2.0</version>
 
   <licenses>
     <license>
@@ -17,14 +17,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.build.aws</groupId>
-            <artifactId>org.springframework.build.aws.maven</artifactId>
-            <version>4.0.0.RELEASE</version>
+            <groupId>org.springframework.build</groupId>
+            <artifactId>aws-maven</artifactId>
+            <version>4.8.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.wagon</groupId>
             <artifactId>wagon-provider-api</artifactId>
-            <version>1.0</version>
+            <version>2.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -34,11 +34,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.1</version>
           <configuration>
             <encoding>UTF-8</encoding>
-            <source>1.5</source>
-            <target>1.5</target>
+            <source>1.6</source>
+            <target>1.6</target>
           </configuration>
         </plugin>
       </plugins>
