Add clojars repo

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
     </license>
   </licenses>
 
+    <distributionManagement>
+        <repository>
+            <id>clojars</id>
+            <name>Clojars repository</name>
+            <url>https://clojars.org/repo</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.build</groupId>
