--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>s3-wagon-private</groupId>
     <artifactId>s3-wagon-private</artifactId>
     <version>1.2.0-SNAPSHOT</version>
+    <description>Deploy and consume artifacts in private S3 repositories.</description>
+    <url>https://github.com/technomancy/s3-wagon-private</url>
+    <scm>
+        <connection>scm:git:git://github.com/technomancy/s3-wagon-private.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/technomancy/s3-wagon-private.git</developerConnection>
+        <url>https://github.com/technomancy/s3-wagon-private</url>
+    </scm>
 
     <licenses>
         <license>
