--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>s3-wagon-private</groupId>
     <artifactId>s3-wagon-private</artifactId>
-    <version>1.3.0-alpha2</version>
+    <version>1.3.0</version>
     <description>Deploy and consume artifacts in private S3 repositories.</description>
     <url>https://github.com/technomancy/s3-wagon-private</url>
     <scm>
