--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>s3-wagon-private</groupId>
     <artifactId>s3-wagon-private</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3-SNAPSHOT</version>
     <description>Deploy and consume artifacts in private S3 repositories.</description>
     <url>https://github.com/technomancy/s3-wagon-private</url>
     <scm>
@@ -67,6 +67,10 @@
                     <artifactId>jackson-databind</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.wagon</groupId>
