--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>s3-wagon-private</groupId>
-    <artifactId>s3-wagon-private</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <artifactId>s3-wagon-private2</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <description>Deploy and consume artifacts in private S3 repositories.</description>
     <url>https://github.com/technomancy/s3-wagon-private</url>
     <scm>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.springframework.build</groupId>
             <artifactId>aws-maven</artifactId>
-            <version>4.8.0.RELEASE</version>
+            <version>5.0.0.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.amazonaws</groupId>
